err/google-drive-cli.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/apiclient'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/drivecli'...
Listing './lib/python3.5/site-packages/drivecli/commands'...
Compiling './lib/python3.5/site-packages/drivecli/commands/about.py'...
***   File "./lib/python3.5/site-packages/drivecli/commands/about.py", line 31
    print r.status
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/drivecli/commands/cd.py'...
***   File "./lib/python3.5/site-packages/drivecli/commands/cd.py", line 32
    print r.status
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/drivecli/commands/changes.py'...
***   File "./lib/python3.5/site-packages/drivecli/commands/changes.py", line 43
    print r.status
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/drivecli/commands/fetch.py'...
***   File "./lib/python3.5/site-packages/drivecli/commands/fetch.py", line 34
    print r
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/drivecli/commands/last.py'...
***   File "./lib/python3.5/site-packages/drivecli/commands/last.py", line 38
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drivecli/commands/ls.py'...
***   File "./lib/python3.5/site-packages/drivecli/commands/ls.py", line 41
    print r.status
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/drivecli/commands/permissions.py'...
***   File "./lib/python3.5/site-packages/drivecli/commands/permissions.py", line 32
    print r.status
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/drivecli/commands/permit.py'...
***   File "./lib/python3.5/site-packages/drivecli/commands/permit.py", line 38
    print r.status
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/drivecli/commands/put.py'...
***   File "./lib/python3.5/site-packages/drivecli/commands/put.py", line 39
    print 'Local file does not exist [%s]' % filename
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/drivecli/commands/recent.py'...
***   File "./lib/python3.5/site-packages/drivecli/commands/recent.py", line 50
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drivecli/drivelib.py'...
***   File "./lib/python3.5/site-packages/drivecli/drivelib.py", line 140
    except apiclient.errors.HttpError, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drivecli/main.py'...
***   File "./lib/python3.5/site-packages/drivecli/main.py", line 41
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/google_api_python_client-1.6.4.dist-info'...
Listing './lib/python3.5/site-packages/google_drive_cli-0.1.egg-info'...
Listing './lib/python3.5/site-packages/googleapiclient'...
Listing './lib/python3.5/site-packages/googleapiclient/discovery_cache'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/oauth2client'...
Listing './lib/python3.5/site-packages/oauth2client/contrib'...
Listing './lib/python3.5/site-packages/oauth2client/contrib/django_util'...
Listing './lib/python3.5/site-packages/oauth2client-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1_modules'...
Listing './lib/python3.5/site-packages/pyasn1_modules-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/rsa'...
Listing './lib/python3.5/site-packages/rsa-3.4.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/uritemplate'...
Listing './lib/python3.5/site-packages/uritemplate-3.0.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
